<resources>
    <string name="app_name">Desafio Firebase</string>
    <string name="btLogin">Log in</string>
    <string name="creatAccount">Create account</string>
    <string name="checkText">Remember</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_passwordR">Repeat Password</string>
    <string name="btRegister">Create Account</string>
    <string name="nome_game">Mortal Kombat X</string>
    <string name="data_lancamento">2018</string>
    <string name="textView_pesquisa_game">Search Game</string>
    <string name="hint_date">Created at</string>
    <string name="hint_description">Description</string>
    <string name="btRegistergame">SAVE GAME</string>
    <string name="gameName">God Of War</string>
</resources>