<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_firebase"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <com.google.android.material.card.MaterialCardView

        android:layout_width="400dp"
        android:layout_height="335dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/hint_email"
                android:textCursorDrawable="@color/textColor"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="120dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/black">>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:textCursorDrawable="@color/textColor"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="95dp"
            android:text="@string/checkText"
            android:buttonTint="@color/FF5252"/>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/FF5252"
            android:text="@string/btLogin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textCreate"
            android:text="@string/creatAccount" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>