<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_firebase"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.LoginActivity">

    <com.google.android.material.card.MaterialCardView

        android:layout_width="390dp"
        android:layout_height="450dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/textColor">

            <EditText
                android:id="@+id/edNameRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/hint_name"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@color/textColor"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="90dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/textColor">

            <EditText
                android:id="@+id/edEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/hint_email"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@color/textColor"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="170dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/textColor">

            <EditText
                android:id="@+id/edPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@color/textColor"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="250dp"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/textColor">

            <EditText
                android:id="@+id/edPasswordRepeatRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_passwordR"
                android:importantForAutofill="no"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@color/textColor"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btRegister"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/FF5252"
            android:text="@string/btRegister"
            android:textColor="@color/white" />


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>